output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_1094.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_1094.py", line 150
    /* pos[0]==7 */ durations[7])))))))
    ^
SyntaxError: invalid syntax
